--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,12 @@
     .w3-bar .w3-button {
       padding: 16px;
     }
+
+    .w3-padding {
+      padding: 46px;
+    }
+
+    
   </style>
   <body>
     <!-- Navbar (sit on top) -->
